// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionText> should render correctly 1`] = `
.c0 {
  font-size: inherit;
  text-align: left;
  background: transparent;
  border: none;
  outline: none;
  padding: 2px 4px;
  margin: 0 -4px 0 24px;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  border-radius: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  cursor: pointer;
  color: #0376DA;
}

.c0:hover {
  color: #6FB1EA;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus-visible {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: inset 0 0 0 2px #0376DA;
}

<a
  className="c0"
/>
`;

exports[`<ActionText> should render correctly the action text when expects to wrap 1`] = `
.c0 {
  font-size: inherit;
  text-align: left;
  background: transparent;
  border: none;
  outline: none;
  padding: 2px 4px;
  margin: 0 -4px 0 24px;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  border-radius: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0376DA;
}

.c0:hover {
  color: #6FB1EA;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus-visible {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: inset 0 0 0 2px #0376DA;
}

<a
  className="c0"
/>
`;

exports[`<ActionText> should render correctly when is disabled 1`] = `
.c0 {
  font-size: inherit;
  text-align: left;
  background: transparent;
  border: none;
  outline: none;
  padding: 2px 4px;
  margin: 0 -4px 0 24px;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  border-radius: 2px;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  color: #6FB1EA;
  cursor: not-allowed;
}

.c0:focus-visible {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: inset 0 0 0 2px #0376DA;
}

<a
  className="c0"
/>
`;
